@@ -1,3 +1,7 @@
+Thu Dec  4 23:11:23 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* file.c, gnubg.c, gtkcube.c, gtkgamelist.c: more minor memory errors
+
 Wed Dec  3 12:06:57 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gtktheory.c: remove missed debug stuff
